Add HTTP Codes